# kidy

./: Cargo.toml  readme.md
.github/workflows/: publish.yml
examples/: ik.rs
src/: lib.rs
src/dynamics/: jacobian.rs  mod.rs
src/kinematics/: base_functions.rs  mod.rs
src/multi_body/: mod.rs  multibody.rs
