[package]
name = "kidy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# liealg = { path = "../liealg" }
liealg = "0.4.1"
approx = "0.5.1"
nalgebra = "0.33.2"
num-traits = "0.2.19"
# robot-parse = { path = "../robot-parse" }
petgraph = "0.6"
urdf-rs = "0.9.0"