[package]
name = "kidy"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "kidy is a library for kinematics and dynamics of multi-body."
documentation = "https://docs.rs/kidy"
homepage = "https://github.com/geshengpsn/kidy"
repository = "https://github.com/geshengpsn/kidy"
readme = "readme.md"
keywords = ["math", "science", "robotics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# liealg = { path = "../liealg" }
liealg = "0.4.1"
approx = "0.5.1"
nalgebra = "0.33.2"
num-traits = "0.2.19"
# robot-parse = { path = "../robot-parse" }
petgraph = "0.6"
urdf-rs = "0.9.0"